oceanmap versions

oceanmap_0.1.31 April 18, 2021 (Robert Bauer)
        - adding no fill land option to gglotmap

oceanmap_0.1.3 April 18, 2021 (Robert Bauer)
        - adding ggplotmaply function
        - revised get.bathy() function
        - nc2raster and nc2time functions revised

oceanmap_0.1.2 Aug 27, 2020 (Robert Bauer)
        - adding ggplotmap function

oceanmap_0.1.1 Sept 18, 2019 (Robert Bauer)
        - adding tiff-format to figure function
        - fixed minor bug in figure function

oceanmap_0.1.0 May 25, 2018 (Robert Bauer)
        - fixing minor bugs in examples

oceanmap_0.0.9 July 03, 2017 (Robert Bauer)
        - allowing cbpos-usage in v()-calls on gz-files

oceanmap_0.0.8 June 21, 2017 (Robert Bauer)
        - fixing bug concerning the cb.xlab arument of the v()-version for ncdf files

oceanmap_0.0.7 June 14, 2017 (Robert Bauer)
        - adding axes argument to plotmap

oceanmap_0.0.6 April 28, 2017 (Robert Bauer)
        - now allowing plotmap()-calls without terrain (fixing error in map.poly(): nothing to draw: all regions out of bounds)

oceanmap_0.0.5 April 11, 2017 (Robert Bauer)
        - fixing minor bugs in plotmap()

oceanmap_0.0.4 March 15, 2017 (Robert Bauer)
	- setting the default projection of map() in plotmap() and v() calls
        - fixing minor bugs in plotmap() and v()

oceanmap_0.0.3 March 8, 2017 (Robert Bauer)
	- loadfonts() set quiet in figure() calls
        - update on NOAA server in get.bathy() calls

oceanmap_0.0.2 -- Sept 15, 2016 (Robert Bauer)
	- update plotmap(), v.plot(), v.raster() and set.colorbar()
        - update cmap and added cmap_topo