@@ -1,16 +1,16 @@
 Package: oceanmap
 Type: Package
 Title: A Plotting Toolbox for 2D Oceanographic Data
-Version: 0.1.31
-Date: 2023-05-07
+Version: 0.1.4
+Date: 2023-09-11
 Author: Robert K. Bauer
 Maintainer: Robert K. Bauer <rkbauer@hawaii.edu>
 Depends: R (>= 3.5.0), maps, mapdata, raster, extrafont, reshape2,
 Imports: abind, fields, plotrix, methods, utils, grDevices, maptools, sp, ncdf4, stats, lubridate, ggplot2, ggedit, sf(>= 0.9-7), plotly
 Description:  Plotting toolbox for 2D oceanographic data (satellite data, sea surface temperature, chlorophyll, ocean fronts & bathymetry). Recognized classes and formats include netcdf, Raster, '.nc' and '.gz' files.
 License: GPL (>= 3)
-Packaged: 2023-05-07 11:27:12 UTC; Mainz
+Packaged: 2023-09-11 21:27:12 UTC; Mainz
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2023-05-07 11:38:17
+Date/Publication: 2023-09-11 21:38:17
 SystemRequirements: ImageMagick
