@@ -1,7 +1,10 @@
 oceanmap versions
 
+oceanmap_0.1.4 April 18, 2021 (Robert Bauer)
+        - adding col.scale argument to ggplotmap function
+
 oceanmap_0.1.31 April 18, 2021 (Robert Bauer)
-        - adding no fill land option to gglotmap
+        - adding no fill land option to gglotmap function
 
 oceanmap_0.1.3 April 18, 2021 (Robert Bauer)
         - adding ggplotmaply function
